# zigral3.0

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.agent-diagnostic  Dockerfile.simple  Dockerfile.test  Dockerfile.vdi  Dockerfile.vm  Dockerfile.vm.fixed  Dockerfile.vm.fixed2  Dockerfile.vm.fixed3  Dockerfile.vm.fixed4  Dockerfile.vnc  LICENSE  LinkedIn_test_search.sh  README-VNC-INTEGRATION.md  README.md  demo.sh  docker-compose.vdi.yml  docker-compose.yml  docker-entrypoint.sh  invalid:memory:  phase2.md  pyproject.toml  requirements-vnc.txt  requirements.md  requirements.txt  setup_vnc.sh  simple-server.py  simple-test.html  start_all_services.sh  start_context_manager.sh  start_frontend.sh  start_uvicorn.sh  update_nginx.sh
.github/workflows/: ci.yml
config/chrome/: preferences.json
config/systemd/: chrome.service  novnc.service  x11vnc.service  xvfb.service
docker/config/: nginx.conf  supervisord.conf  supervisord.fixed.conf  supervisord.test.conf
docker/scripts/: diagnose.sh  start.sh
docker/scripts/fix/: fix-supervisord.sh
docs/: VDI_deployment_testing.md  VDIinstructions.md  cleanup_summary.md  development.md  frontend_backend_integration.md  kasm_troubleshooting.md  local_development.md  novnc_implementation.md  novnc_integration_guide.md  phase2.md  phase3.md  project_cleanup.md  quick_start.md  requirements.md  startup.md  streamlined-zigral-vnc-plan2.19.25.md  system_architecture.md  vm_architecture.md  vm_connection.md  zigral_punch_list.md
docs/archive/: phase1.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/css/: chat.css  styles.css
frontend/js/: api-client.js  api-client.test.js  chat.js  kasm-api.js  kasm.js  kasm.js.example  vnc-client.js
scripts/: cleanup_project.sh  manage_tunnels.sh  start-desktop  start_dev_environment.sh  sync-from-vm.sh  sync-to-vm.sh  validate_env.py
src/: main.py
src/agents/: agentrequirements.txt  demo_vnc.py
src/agents/base/: browser.py
src/agents/lincoln/: agent.py  linkedin_client.py  main.py  utils.py
src/agents/shaun/: __init__.py  agent.py  demo_shaun_vnc.py  main.py  sheets_client.py  (+1 more)
src/common/: messaging.py
src/context_manager/: config.py  crud.py  database.py  logger.py  main.py  models.py
src/orchestrator/: agent_commands.py  checkpoint.py  llm_integration.py  logger.py  orchestrator.py
src/ui/: credentials.py  index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_checkpoint.py  test_context_manager.py  test_database.py  test_linkedin_client.py  test_llm_integration.py  test_logger.py  test_orchestrator.py  test_shaun_sheets_client.py  test_websocket.py
tests/agents/: test_structure.py
tests/integration/: __init__.py  test_agent_integration.py  test_agent_workflows.py  test_rabbitmq_integration.py  test_vdi_setup.py  test_vnc_setup.py  test_workflows.py
tests/orchestrator/: test_action_sequence.py  test_agent_commands.py  test_llm_integration.py
tests/ui/: test_credentials.py
vnc/: README.md
vnc/config/: novnc.nginx.conf  novnc.service  vnc.token
vnc/docker/: Dockerfile
vnc/scripts/: lint.py  start-desktop  start-novnc  validate_env.py
(+29 files in other folders)
